--- a/web/themes/custom/usagov/sass/_uswds-theme-custom-styles.scss
+++ b/web/themes/custom/usagov/sass/_uswds-theme-custom-styles.scss
@@ -775,7 +775,7 @@ select:not([disabled]):focus,
 
 .usa-pagination__button,
 .usa-pagination__link {
-  color: color('black');
+  color: color('gray-90');
 }
 
 #main-content {
